--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -173,6 +173,22 @@
       }
 
     }
+
+    &.reserved {
+      color: $color-dark;
+
+      &::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background: #3CB371;
+        opacity: 0.4;
+      }
+
+    }
   }
 
   [data-table="1"] {
