--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -28,11 +28,11 @@
 }
 
 .photo-1 p:nth-of-type(2) {
-  display: none;
+  opacity: 0;
 }
 
 .photo-1:hover p:nth-of-type(2) {
-  display: block;
+  opacity: 1;
 }
 
 .photo-1 p {
@@ -65,11 +65,11 @@
 }
 
 .photo-2 p:nth-of-type(2) {
-  display: none;
+  opacity: 0;
 }
 
 .photo-2:hover p:nth-of-type(2) {
-  display: block;
+  opacity: 1;
 }
 
 .photo-2 p {
