--- a/src/sass/partials/_settings.scss
+++ b/src/sass/partials/_settings.scss
@@ -6,6 +6,9 @@ $color-main: #ff6b6b;
 $color-warning: #f6b93b;
 $color-danger: #e55039;
 $color-success: #78e08f;
+$color-slider-empty: green;
+$color-slider-medium: orange;
+$color-slider-busy: red;
 
 $font-header: 'Oswald', sans-serif;
 $font-text: 'Lato', sans-serif;
